--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes: 
       - ./app/:/usr/src/app:cached
     working_dir: '/usr/src/app'
-    command: yarn dev -o
+    command: yarn dev
